--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.7",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
+    "sass": "^1.78.0",
+    "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
